--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type='image/svg+xml' href="/client/public/Car icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LeGrandTheftAuto</title>
-
+    <title>Biip</title>
   </head>
   <body>
     <div id="app"></div>
